--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -292,6 +292,6 @@ window#waybar.hidden {
 	margin-bottom: 0px;
 	border-radius: 10px;
 	transition: none;
-	color: #161320;
-	background: #F2CDCD;
+	color: #ebdbb2;
+	background: #585930;
 }
